--- a/ReactiveBits/ReactiveBits.csproj
+++ b/ReactiveBits/ReactiveBits.csproj
@@ -67,8 +67,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="WihoutRX\StockMonitorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WihoutRX\StockInfo.cs" />
+    <Compile Include="WihoutRX\StockMonitor.cs" />
+    <Compile Include="WihoutRX\StockTicker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
