--- a/ReactiveBits/ReactiveBits.csproj
+++ b/ReactiveBits/ReactiveBits.csproj
@@ -89,6 +89,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Delegates\Delegates.cs" />
     <Compile Include="WithoutRX\StockInfo.cs" />
     <Compile Include="WithoutRX\StockMonitorTest.cs" />
     <Compile Include="WithoutRX\StockObservable.cs" />
