Delegates can be passed as first-order functions

--- a/ReactiveBits/ReactiveBits.csproj
+++ b/ReactiveBits/ReactiveBits.csproj
@@ -89,7 +89,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Delegates\AreSimilar.cs" />
     <Compile Include="Delegates\Delegates.cs" />
+    <Compile Include="Delegates\DelegatesTest.cs" />
     <Compile Include="WithoutRX\StockInfo.cs" />
     <Compile Include="WithoutRX\StockMonitorTest.cs" />
     <Compile Include="WithoutRX\StockObservable.cs" />
