--- a/ReactiveBits/ReactiveBits.csproj
+++ b/ReactiveBits/ReactiveBits.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Delegates\Delegates.cs" />
     <Compile Include="Delegates\DelegatesTest.cs" />
     <Compile Include="Delegates\StringComparators.cs" />
+    <Compile Include="Delegates\Examples\StrategyPattern\StrategyPatternTest.cs" />
     <Compile Include="WithoutRX\StockInfo.cs" />
     <Compile Include="WithoutRX\StockMonitorTest.cs" />
     <Compile Include="WithoutRX\StockObservable.cs" />
