--- a/ReactiveBits/ReactiveBits.csproj
+++ b/ReactiveBits/ReactiveBits.csproj
@@ -92,9 +92,14 @@
     <Compile Include="Delegates\AreSimilarWithNamedDelegate.cs" />
     <Compile Include="Delegates\Delegates.cs" />
     <Compile Include="Delegates\DelegatesTest.cs" />
-    <Compile Include="FunctionalProgramming\LazyLoading\LazyLoadingExamples.cs" />
+    <Compile Include="FunctionalProgramming\ExtensionMethods\ExtensionMethodsTests.cs" />
+    <Compile Include="FunctionalProgramming\LazyLoading\HeavyClass.cs" />
+    <Compile Include="FunctionalProgramming\LazyLoading\DeferredInvocationTest.cs" />
     <Compile Include="Delegates\StringComparators.cs" />
     <Compile Include="Delegates\Examples\StrategyPattern\StrategyPatternTest.cs" />
+    <Compile Include="FunctionalProgramming\LazyLoading\LightClassWithFunc.cs" />
+    <Compile Include="FunctionalProgramming\LazyLoading\LightClassWithLazy.cs" />
+    <Compile Include="FunctionalProgramming\LazyLoading\LightClassWithoutFunc.cs" />
     <Compile Include="WithoutRX\StockInfo.cs" />
     <Compile Include="WithoutRX\StockMonitorTest.cs" />
     <Compile Include="WithoutRX\StockObservable.cs" />
