--- a/ReactiveBits/ReactiveBits.csproj
+++ b/ReactiveBits/ReactiveBits.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Delegates\AreSimilarWithNamedDelegate.cs" />
     <Compile Include="Delegates\Delegates.cs" />
     <Compile Include="Delegates\DelegatesTest.cs" />
+    <Compile Include="FunctionalProgramming\AnonymousTypes\AnonymousTypesExamples.cs" />
     <Compile Include="FunctionalProgramming\ExtensionMethods\ExtensionMethodsTests.cs" />
     <Compile Include="FunctionalProgramming\LazyLoading\HeavyClass.cs" />
     <Compile Include="FunctionalProgramming\LazyLoading\DeferredInvocationTest.cs" />
