--- a/ReactiveBits/ReactiveBits.csproj
+++ b/ReactiveBits/ReactiveBits.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Delegates\Delegates.cs" />
     <Compile Include="Delegates\DelegatesTest.cs" />
     <Compile Include="FunctionalProgramming\AnonymousTypes\AnonymousTypesExamples.cs" />
+    <Compile Include="FunctionalProgramming\DeferredExecution\DeferredExecutionExamples.cs" />
     <Compile Include="FunctionalProgramming\ExtensionMethods\ExtensionMethodsTests.cs" />
     <Compile Include="FunctionalProgramming\LazyLoading\HeavyClass.cs" />
     <Compile Include="FunctionalProgramming\LazyLoading\DeferredInvocationTest.cs" />
