Example of use of FromEventPattern

--- a/ReactiveBits/ReactiveBits.csproj
+++ b/ReactiveBits/ReactiveBits.csproj
@@ -89,6 +89,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreatingObservables\FromEventPattern\SomeEventBasedClass.cs" />
     <Compile Include="CreatingObservables\Handcrafted\Extensions.cs" />
     <Compile Include="CreatingObservables\Handcrafted\NumberObservableTest.cs" />
     <Compile Include="CreatingObservables\Handcrafted\NumberObservable.cs" />
