--- a/ReactiveBits/ReactiveBits.csproj
+++ b/ReactiveBits/ReactiveBits.csproj
@@ -89,6 +89,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreatingObservables\FromEnumerables\MakeMeObservable.cs" />
     <Compile Include="CreatingObservables\FromEventPattern\SomeEventBasedClass.cs" />
     <Compile Include="CreatingObservables\FromEvent\WiFiScanner.cs" />
     <Compile Include="CreatingObservables\Handcrafted\Extensions.cs" />
